@@ -1,3 +1,6 @@
+Version 2012060102
++ New theme: noughts_and_crosses
+
 Version 2012060101 Fri Jun  1 02:34:11 CEST 2012
 + New theme: cluedo
 
